# quad-periodic-mpc

./: README.md
a1_description/: README.md
a1_description/launch/: a1_robot_description.launch  a1_rviz.launch
a1_description/sensors/: realsense435.xml
a1_description/urdf/: a1.urdf  a1_edited.urdf  a1_edited_air_fixed.urdf  a1_edited_new.urdf  stairs.urdf
a1_description/xacro/: const.xacro  robot.xacro
be2r_cmpc_unitree/: README.md  package.xml
be2r_cmpc_unitree/src/: be2r_cmpc_unitree_node.cpp
be2r_cmpc_unitree/src/be2r_cmpc_unitree/: be2r_cmpc_unitree.hpp
be2r_cmpc_unitree/src/controllers/: CMakeLists.txt
be2r_cmpc_unitree/src/controllers/BalanceController/: BalanceController.cpp
be2r_cmpc_unitree/src/controllers/CMPC/: CMPC_Locomotion.cpp
be2r_cmpc_unitree/src/controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.h
be2r_cmpc_unitree/src/fsm/fsm_states/: FSM_State_Passive.h  FSM_State_StandUp.cpp
raisim_unitree_ros_driver/: CMakeLists.txt  README.md  package.xml  path_list.h.cmake
raisim_unitree_ros_driver/description/urdf/: a1.urdf  a1_edited.urdf  mini_cheetah.urdf
raisim_unitree_ros_driver/include/raisim_unitree_ros_driver/: raisim_unitree_ros_driver.hpp
raisim_unitree_ros_driver/launch/: raisim_unitree_ros_driver.launch  spawn.launch
raisim_unitree_ros_driver/src/: raisim_unitree_ros_driver.cpp  raisim_unitree_ros_driver_node.cpp
unitree_legged_msgs/: CMakeLists.txt
unitree_legged_msgs/msg/: AllLegsInfo.msg  BodyInfo.msg  HighCmd.msg  HighState.msg  IMU.msg  JointStateSimple.msg  LegInfo.msg  LogData.msg  LowCmd.msg  LowState.msg  MetricInfo.msg  Parameters.msg  StateError.msg
